--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset = "utf-8">
-        <meta name = "author" content = "CriShoux"/>
+        <meta name = "author" content = "Syko#0931"/>
+        <meta name = "description" content = "Syko's Roblox Scripts"/>
 
         <title>Syko's Scripts</title>
     </head>
