--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset = "utf-8">
         <meta name = "author" content = "Syko#0931"/>
         <meta name = "description" content = "Syko's Roblox Scripts"/>
+        
+        <meta property = "og:title" content = "Syko's Scripts"/>
+		<meta property = "og:description" content = "Syko's Roblox Scripts"/>
+		<meta property = "og:type" content = "website"/>
+		<meta property = "og:url" content = "https://sykoticcataclysm.github.io"/>
+		<meta property = "og:secure_url" content = "https://sykoticcataclysm.github.io">
 
         <title>Syko's Scripts</title>
     </head>
