--- a/index.html
+++ b/index.html
@@ -17,19 +17,16 @@
 
         <title>Syko's Scripts</title>
 
-        <style>
-
-            body
-            {
-                background-color: darkblue;
-            }
-
-        </style>
-
     </head>
 
     <body>
         
+        <div id = "Header">
+
+            <h1><font size = "25">Syko's Roblox Scripts</font></h1>
+
+        </div>
+
     </body>
 
 </html>
