--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
         <title>Syko's Scripts</title>
 
+        <style>
+        
+            #Header h1
+            {
+                margin: 18px;
+                color:darkorange;
+                font-family: cursive;
+            }
+
+        </style>
+
     </head>
 
     <body>
