--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
             #Header h1
             {
-                margin: 18px;
+                text-align: center;
                 color:darkorange;
                 font-family: cursive;
             }
