--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
-<!DOCTYPE html>
-
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset = "utf-8">
-        <meta property = "og:title" content = "Syko's Scripts"/>
-    </head>
-    <body>
-        <header>
-            <nav id = "NavBar">
-                <div class = "container">
-                    <u1>
-                        <li><a href = "https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua">Random Shite</a></li>
-                    </u1>
-                </div>
-            </nav>
-        </header>
-    </body>
+	<head>
+
+		<meta charset = "utf-8">
+
+		<meta name = "author" content = "Syko#0931"/>
+		<meta name = "description" content = "Syko's Roblox Scripts"/>
+		<meta name = "keywords" content = "Scripts, Roblox, Syko, JailBreak"/>
+
+		<meta property = "og:title" content = "Syko's Scripts"/>
+		<meta property = "og:description" content = "Syko's Roblox Scripts"/>
+		<meta property = "og:type" content = "website"/>
+		<meta property = "og:url" content = "https://sykoticcataclysm.github.io"/>
+		<meta property = "og:secure_url" content = "https://sykoticcataclysm.github.io">
+
+		<title>Syko's Scripts</title>
+        <style>
+            body
+            {
+                background-color: #232323;
+                background-image: url(Landscape.jpg);
+                background-attachment: fixed;
+                background-size: cover;
+                background-repeat: no-repeat
+                TEXT = "#ffffff"
+            }
+            #Header h1
+            {
+                text-align: center;
+                margin: 18px;
+                color: #ffffff;
+                font-family: fantasy;
+            }
+            #Scripts a
+            {
+                margin: 35px;
+                line-height: 60px;
+                color: #e8e8e8;
+                font-family: Monospace;
+                font-size: 25px;
+            }
+        </style>
+	</head>
+	<body>
+        <div id = "Header">
+            <a>Title Gay Boy</a>
+        </div>
+		<div id = "Scripts">
+			<a href="https://crishoux.github.io/Aimbot.txt" target = "_blank">Aimbot</a>
+			<br>
+		</div>
+	</body>
 </html>
