--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
             {
                 text-align: center;
                 margin: 18px;
-                color: #ffffff;
+                color: #e8e8e8;
                 font-family: fantasy;
             }
             #Scripts a
             {
+                text-align: center;
                 margin: 35px;
                 line-height: 60px;
                 color: #e8e8e8;
-                font-family: Monospace;
+                font-family: 'Segoe UI';
                 font-size: 25px;
             }
         </style>
