--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</head>
 	<body>
         <div id = "Header">
-            <a>Title Gay Boy</a>
+            <h1>Title Gay Boy</h1>
         </div>
 		<div id = "Scripts">
 			<a href="https://crishoux.github.io/Aimbot.txt" target = "_blank">Aimbot</a>
