--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 text-align: center;
                 margin: 18px;
                 color: #e8e8e8;
-                font-family: fantasy;
+                font-family:'Segoe UI';
+                font-size: large;
+                font-style: italic;
             }
             #Scripts a
             {
