--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             body
             {
                 background-color: #232323;
-                background-image: url(Landscape.jpg);
+                background-image: url(sitebackground.jpeg);
                 background-attachment: fixed;
                 background-size: cover;
                 background-repeat: no-repeat
@@ -31,7 +31,7 @@
                 margin: 18px;
                 color: #e8e8e8;
                 font-family:'Segoe UI';
-                font-size: large;
+                font-size: 40px;
                 font-style: italic;
             }
             #Scripts a
