--- a/index.html
+++ b/index.html
@@ -31,26 +31,36 @@
                 margin: 18px;
                 color: #e8e8e8;
                 font-family:'Segoe UI';
-                font-size: 40px;
+                font-size: 45px;
                 font-style: italic;
             }
-            #Scripts a
+            #Title t1
             {
                 text-align: center;
                 margin: 35px;
                 line-height: 60px;
                 color: #e8e8e8;
                 font-family: 'Segoe UI';
-                font-size: 25px;
+                font-size: 30px;
+            }
+            #Description d1
+            {
+                text-align: center;
+                margin: 10px;
+                line-height: 20px;
+                color: #e8e8e8;
+                font-family: 'Segoe UI';
+                font-size: 20px;
             }
         </style>
 	</head>
 	<body>
         <div id = "Header">
-            <h1>Title Gay Boy</h1>
+            <h1>Syko's Scripts</h1>
         </div>
 		<div id = "Scripts">
-			<a href="https://crishoux.github.io/Aimbot.txt" target = "_blank">Aimbot</a>
+            <t1 href = "https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua" target = "_blank">JailBreak Script</t1>
+            <d1>*PAID EXECUTORS ONLY* JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</d1>
 			<br>
 		</div>
 	</body>
