--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         <div id = "Header">
             <h1>Syko's Scripts</h1>
         </div>
-		<div id = "Scripts">
+		<div id = "Title">
             <t1 href = "https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua" target = "_blank">JailBreak Script</t1>
+        </div>
+        <div id = "Description">
             <d1>*PAID EXECUTORS ONLY* JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</d1>
 			<br>
 		</div>
