--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 font-size: 45px;
                 font-style: italic;
             }
-            #Title t1
+            #Title h1
             {
                 text-align: center;
                 margin: 35px;
@@ -43,7 +43,7 @@
                 font-family: 'Segoe UI';
                 font-size: 30px;
             }
-            #Description d1
+            #Description h1
             {
                 text-align: center;
                 margin: 10px;
@@ -59,10 +59,10 @@
             <h1>Syko's Scripts</h1>
         </div>
 		<div id = "Title">
-            <t1 href = "https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua" target = "_blank">JailBreak Script</t1>
+            <h1 href = "https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua" target = "_blank">JailBreak Script</h1>
         </div>
         <div id = "Description">
-            <d1>*PAID EXECUTORS ONLY* JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</d1>
+            <h1>*PAID EXECUTORS ONLY* JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
 			<br>
 		</div>
 	</body>
