--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 font-size: 45px;
                 font-style: italic;
             }
+            #Header hr
+            {
+                margin: 100px;
+            }
             #Title h1
             {
                 text-align: center;
