--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             }
             #Header hr
             {
-                margin: 100px;
+                margin: 50px;
             }
             #Title h1
             {
@@ -55,6 +55,10 @@
                 color: #e8e8e8;
                 font-family: 'Segoe UI';
                 font-size: 20px;
+            }
+            #Description hr
+            {
+                margin: 10px
             }
         </style>
 	</head>
