--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             {
                 margin: 50px;
             }
+            
             #Title h1
             {
                 text-align: center;
@@ -47,6 +48,7 @@
                 font-family: 'Segoe UI';
                 font-size: 30px;
             }
+
             #Description h1
             {
                 text-align: center;
@@ -58,7 +60,7 @@
             }
             #Description hr
             {
-                margin: 10px
+                margin: 50px
             }
         </style>
 	</head>
@@ -72,7 +74,9 @@
         </div>
         <div id = "Description">
             <h1>*PAID EXECUTORS ONLY* JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
-			<br>
+            <br>
+            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
+            <hr>
 		</div>
 	</body>
 </html>
