--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             {
                 margin: 50px
             }
+            #Description img
+            {
+                align-items: center;
+                margin: 50px
+            }
         </style>
 	</head>
 	<body>
