--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             #Description img
             {
                 align-items: center;
-                margin: 50px
+                margin: 50px;
+                width: 999999;
+                height: 600;
             }
         </style>
 	</head>
