--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             {
                 align-items: center;
                 margin: 50px;
-                width: 999999;
-                height: 600;
+                width: "1200";
+                height: "600";
             }
         </style>
 	</head>
