--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
             }
             #Description img
             {
+                align-self: center;
+                align-content: center;
                 align-items: center;
                 margin: 50px;
-                width: "1200";
-                height: "600";
+                width: "1000";
+                height: "500";
             }
         </style>
 	</head>
