--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
             <h1 href = "https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua" target = "_blank">JailBreak Script</h1>
         </div>
         <div id = "Description">
-            <h1>*PAID EXECUTORS ONLY* JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
+            <h1>JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
             <br>
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
+            <br>
+            <h1>Working Executors:</h1>
+            <h1>Synapse X, Sentinel</h1>
             <hr>
 		</div>
 	</body>
