--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <br>
             <h1>Working Executors:</h1>
-            <h1>Synapse X, Sentinel</h1>
+            <h1>Synapse X, Sentinel, Bi</h1>
             <hr>
 		</div>
 	</body>
