--- a/index.html
+++ b/index.html
@@ -64,12 +64,7 @@
             }
             #Description img
             {
-                align-self: center;
-                align-content: center;
-                align-items: center;
                 margin: 50px;
-                width: "5";
-                height: "500";
             }
         </style>
 	</head>
@@ -84,10 +79,10 @@
         <div id = "Description">
             <h1>JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
             <br>
-            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
+            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png" width="100" height="500">
             <br>
             <h1>Working Executors:</h1>
-            <h1>Synapse X, Sentinel, Bi</h1>
+            <h1>Synapse X, Sentinel</h1>
             <hr>
 		</div>
 	</body>
