--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             }
             #Description img
             {
+                display: block;
                 margin: 50px;
             }
         </style>
@@ -79,10 +80,10 @@
         <div id = "Description">
             <h1>JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
             <br>
-            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png" width="1000" height="500" class="center">
+            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png" width="1000" height="500">
             <br>
             <h1>Working Executors:</h1>
-            <h1>Synapse X, Sentinel</h1>
+            <h1>Synapse X, Sentinel, Maybe SirHurt</h1>
             <hr>
 		</div>
 	</body>
