--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             #Description img
             {
                 display: block;
-                margin: 50px;
+                margin-left: auto;
+                margin-right: auto;
+                width: 80%;
             }
         </style>
 	</head>
@@ -80,7 +82,7 @@
         <div id = "Description">
             <h1>JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
             <br>
-            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png" width="1000" height="500">
+            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <br>
             <h1>Working Executors:</h1>
             <h1>Synapse X, Sentinel, Maybe SirHurt</h1>
