--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
                 margin-right: auto;
                 width: 80%;
             }
+            #Description button
+            {
+                color: rgb(255, 255, 255);
+                background-color: rgb(45, 45, 45);
+                margin-top: 45px;
+                border: 0px;
+                border-radius: 5px;
+                cursor: pointer;
+                width: 80%;
+                height: 35px;
+            }
         </style>
 	</head>
 	<body>
