--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
             }
             #Description button
             {
+                display: block;
                 margin-left: auto;
                 margin-right: auto;
                 color: rgb(255, 255, 255);
                 background-color: rgb(45, 45, 45);
-                border: 0px;
-                border-radius: 5px;
+                border-color: rgb(30, 30, 30);
+                border: 2px;
+                border-radius: 10px;
                 cursor: pointer;
                 width: 80%;
                 height: 35px;
