--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <br>
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <br>
-            <h1>Working Executors:</h1>
-            <h1>Synapse X, Sentinel, Maybe SirHurt</h1>
+            <h1>Known To Work On:</h1>
+            <h1>Synapse X, Sentinel</h1>
             <button id = "JBBtn">loadstring(game:HttpGet('https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua'))()</button>
             <hr>
         </div>
