--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 color: rgb(255, 255, 255);
                 background-color: rgb(45, 45, 45);
                 border-color: rgb(30, 30, 30);
-                border: 2px;
-                border-radius: 10px;
+                border: 5px;
+                border-radius: 20px;
                 cursor: pointer;
                 width: 80%;
-                height: 35px;
+                height: 40px;
             }
         </style>
 	</head>
@@ -98,8 +98,8 @@
             <br>
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <br>
-            <h1>Known To Work On:</h1>
-            <h1>Synapse X, Sentinel</h1>
+            <h1>Working Executors:</h1>
+            <h1>Synapse X, Sentinel, Maybe SirHurt</h1>
             <button id = "JBBtn">loadstring(game:HttpGet('https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua'))()</button>
             <hr>
         </div>
