--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 margin-right: auto;
                 width: 80%;
             }
-            #Description button
+            #Description a
             {
                 display: block;
                 margin-left: auto;
@@ -97,8 +97,8 @@
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <br>
             <h1>Working Executors:</h1>
-            <h1>Synapse X, Sentinel, Maybe SirHurt</h1>
-            <button id = "JBBtn">loadstring(game:HttpGet('https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua'))()</button>
+            <h1>Synapse X, Sentinel</h1>
+            <a id = "JBBtn">loadstring(game:HttpGet('https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua'))()</a>
             <hr>
         </div>
         <script>
