--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 margin-right: auto;
                 width: 80%;
             }
-            #Description a
+            #Description button
             {
                 display: block;
                 margin-left: auto;
@@ -98,7 +98,7 @@
             <br>
             <h1>Working Executors:</h1>
             <h1>Synapse X, Sentinel</h1>
-            <a id = "JBBtn">loadstring(game:HttpGet('https://raw.githubusercontent.com/SykoticCataclysm/Scripts/master/Paid%20Executors/Jailbreak.lua'))()</a>
+            <button id = "JBBtn">Copy Script</button>
             <hr>
         </div>
         <script>
