--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <br>
             <h1>Working Executors:</h1>
             <h1>Synapse X, Sentinel</h1>
-            <button id = "JBBtn">Copy Script</button>
+            <button id = "JBBtn">Copy Script Loadstring</button>
             <hr>
         </div>
         <script>
