--- a/index.html
+++ b/index.html
@@ -87,14 +87,17 @@
         <div id = "Header">
             <h1>Syko's Scripts</h1>
             <hr>
-        </div id = "Title">
+	</div> 
+	<div id = "Title">
             <h1>JailBreak Script</h1>
+	    <br>
         </div>
         <div id = "Description">
             <h1>JailBreak Script Containing A TP Bypass, Custom AutoRob, Gun Mods, Vehicle Upgrades, And More!</h1>
             <br>
             <h1>Working Executors:</h1>
             <h1>Synapse X, Sentinel</h1>
+	    <br>
             <button id = "JBBtn">Get Script</button>
             <hr>
         </div>
