--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 margin: 18px;
                 color: #e8e8e8;
                 font-family:'Segoe UI';
-                font-size: 45px;
+                font-size: 60px;
                 font-style: italic;
             }
             #Header hr
@@ -46,7 +46,7 @@
                 line-height: 60px;
                 color: #e8e8e8;
                 font-family: 'Segoe UI';
-                font-size: 30px;
+                font-size: 40px;
             }
 
             #Description h1
@@ -89,7 +89,7 @@
             <hr>
 	</div> 
 	<div id = "Title">
-            <h1>JailBreak Script</h1>
+            <h1>JailBreak</h1>
 	    <br>
         </div>
         <div id = "Description">
@@ -98,7 +98,7 @@
             <h1>Working Executors:</h1>
             <h1>Synapse X, Sentinel</h1>
 	    <br>
-            <button id = "JBBtn">Get Script</button>
+            <button id = "JBBtn">Get JailBreak Script</button>
             <hr>
         </div>
         <script>
