--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <br>
             <h1>Working Executors:</h1>
 	        <h1>Synapse X, Sentinel</h1>
-            <button id = "JBBtn">Get JailBreak Script</button>
+            <button id = "JBBtn">Get My JailBreak Script</button>
             <hr>
         </div>
         <script>
