--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 cursor: pointer;
                 width: 50%;
                 height: 40px;
+                font-size: 18px;
             }
         </style>
 	</head>
@@ -90,7 +91,7 @@
             <br>
             <h1>Working Executors:</h1>
 	        <h1>Synapse X, Sentinel</h1>
-            <button id = "JBBtn">Get My JailBreak Script</button>
+            <button id = "JBBtn">Get JailBreak Script</button>
             <hr>
         </div>
         <script>
