--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -68,8 +68,18 @@
                 background-color: rgb(45, 45, 45);
                 border-radius: 20px;
                 cursor: pointer;
-                width: 50%;
+                width: 80%;
                 height: 40px;
+                font-size: 18px;
+            }
+            #Description li
+            {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                color: rgb(255, 255, 255);
+                height: 24px;
+                font-size: 18px;
             }
         </style>
 	</head>
@@ -81,6 +91,7 @@
 	    </div> 
         <div id = "Description">
             <h1>Amazing Script Containing:</h1>
+            <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
             <ul>
                 <li>Working TP Bypass</li>
                 <li>Car NoClip</li>
