--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -78,6 +78,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 color: rgb(255, 255, 255);
+                width: 80%;
                 height: 24px;
                 font-size: 18px;
             }
@@ -88,10 +89,10 @@
             <hr>
             <h1>JailBreak Script</h1>
             <hr>
-	    </div> 
+	    </div>
         <div id = "Description">
-            <h1>Amazing Script Containing:</h1>
             <img src = "https://cdn.discordapp.com/attachments/655842007830495282/671028506486112262/unknown.png">
+            <h1>Amazing Script Containing:</h1>
             <ul>
                 <li>Working TP Bypass</li>
                 <li>Car NoClip</li>
