--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -85,36 +85,36 @@
             <hr>
             <h1>Amazing Script Containing:</h1>
             <br>
-            <li>Working TP Bypass</li>
-            <li>Car NoClip</li>
-            <li>Car Jump</li>
-            <li>Rainbow Car</li>
-            <li>Infinite Nitro</li>
-            <li>Rainbow Nitro</li>
-            <li>Never Break Tires</li>
-            <li>Free Mobile Garage</li>
-            <li>Car Speed, Suspension Height Mods</li>
-            <li>Free Premium JetPack Fuel</li>
-            <li>Infinite JetPack Fuel</li>
-            <li>Give JetPack</li>
-            <li>No Doors</li>
-            <li>No Buildings</li>
-            <li>Anti-Spike Traps</li>
-            <li>Give Items</li>
-            <li>NoClip</li>
-            <li>Fly ( Works For People And Cars )</li>
-            <li>Infinite Jump</li>
-            <li>Click TP</li>
-            <li>No Wait</li>
-            <li>Infinite Donuts</li>
-            <li>Auto Breakout</li>
-            <li>WalkSpeed, Gravity Mods</li>
-            <li>Weapon Mods: Full Auto, Fire Rate, Mag Size, Camera Shake, Bullet Spread, Bullets Per Shot</li>
-            <li>Criminal, Police, Prisoner, Airdrop ESP</li>
-            <li>Criminal, Police, Prisoner, Airdrop Tracers</li>
-            <li>Tracer Width Mod</li>
-            <li>Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</li>
-            <li>Toggleable Store Labels</li>
+            <h1>Working TP Bypass</h1>
+            <h1>Car NoClip</h1>
+            <h1>Car Jump</h1>
+            <h1>Rainbow Car</h1>
+            <h1>Infinite Nitro</h1>
+            <h1>Rainbow Nitro</h1>
+            <h1>Never Break Tires</h1>
+            <h1>Free Mobile Garage</h1>
+            <h1>Car Speed, Suspension Height Mods</h1>
+            <h1>Free Premium JetPack Fuel</h1>
+            <h1>Infinite JetPack Fuel</h1>
+            <h1>Give JetPack</h1>
+            <h1>No Doors</h1>
+            <h1>No Buildings</h1>
+            <h1>Anti-Spike Traps</h1>
+            <h1>Give Items</h1>
+            <h1>NoClip</h1>
+            <h1>Fly ( Works For People And Cars )</h1>
+            <h1>Infinite Jump</h1>
+            <h1>Click TP</h1>
+            <h1>No Wait</h1>
+            <h1>Infinite Donuts</h1>
+            <h1>Auto Breakout</h1>
+            <h1>WalkSpeed, Gravity Mods</h1>
+            <h1>Weapon Mods: Full Auto, Fire Rate, Mag Size, Camera Shake, Bullet Spread, Bullets Per Shot</h1>
+            <h1>Criminal, Police, Prisoner, Airdrop ESP</h1>
+            <h1>Criminal, Police, Prisoner, Airdrop Tracers</h1>
+            <h1>Tracer Width Mod</h1>
+            <h1>Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</h1>
+            <h1>Toggleable Store Labels</h1>
             <hr>
             <button id = "JBBtn">loadstring(game:HttpGet('https://github.com/SykoticCataclysm/Scripts/blob/master/Paid%20Executors/Jailbreak.lua', true)()</button>
             <hr>
