--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -72,6 +72,16 @@
                 height: 40px;
                 font-size: 16px;
             }
+            .align-left
+            { 
+                float: left;
+                width: 50%; 
+            }
+            .align-right
+            { 
+                float: right;
+                width: 50%; 
+            }
         </style>
 	</head>
 	<body>
@@ -85,36 +95,36 @@
             <hr>
             <h1>Amazing Script Containing:</h1>
             <br>
-            <h1>Working TP Bypass</h1>
-            <h1>Car NoClip</h1>
-            <h1>Car Jump</h1>
-            <h1>Rainbow Car</h1>
-            <h1>Infinite Nitro</h1>
-            <h1>Rainbow Nitro</h1>
-            <h1>Never Break Tires</h1>
-            <h1>Free Mobile Garage</h1>
-            <h1>Car Speed, Suspension Height Mods</h1>
-            <h1>Free Premium JetPack Fuel</h1>
-            <h1>Infinite JetPack Fuel</h1>
-            <h1>Give JetPack</h1>
-            <h1>No Doors</h1>
-            <h1>No Buildings</h1>
-            <h1>Anti-Spike Traps</h1>
-            <h1>Give Items</h1>
-            <h1>NoClip</h1>
-            <h1>Fly ( Works For People And Cars )</h1>
-            <h1>Infinite Jump</h1>
-            <h1>Click TP</h1>
-            <h1>No Wait</h1>
-            <h1>Infinite Donuts</h1>
-            <h1>Auto Breakout</h1>
-            <h1>WalkSpeed, Gravity Mods</h1>
-            <h1>Weapon Mods: Full Auto, Fire Rate, Mag Size, Camera Shake, Bullet Spread, Bullets Per Shot</h1>
-            <h1>Criminal, Police, Prisoner, Airdrop ESP</h1>
-            <h1>Criminal, Police, Prisoner, Airdrop Tracers</h1>
-            <h1>Tracer Width Mod</h1>
-            <h1>Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</h1>
-            <h1>Toggleable Store Labels</h1>
+            <div class="align-left">Working TP Bypass</div>
+            <div class="align-left">Car NoClip</div>
+            <div class="align-left">Car Jump</div>
+            <div class="align-left">Rainbow Car</div>
+            <div class="align-left">Infinite Nitro</div>
+            <div class="align-left">Rainbow Nitro</div>
+            <div class="align-left">Never Break Tires</div>
+            <div class="align-left">Free Mobile Garage</div>
+            <div class="align-left">Car Speed, Suspension Height Mods</div>
+            <div class="align-left">Free Premium JetPack Fuel</div>
+            <div class="align-left">Infinite JetPack Fuel</div>
+            <div class="align-left">Give JetPack</div>
+            <div class="align-left">No Doors</div>
+            <div class="align-left">No Buildings</div>
+            <div class="align-left">Anti-Spike Traps</div>
+            <div class="align-left">Give Items</div>
+            <div class="align-right">NoClip</div>
+            <div class="align-right">Fly ( Works For People And Cars )</div>
+            <div class="align-right">Infinite Jump</div>
+            <div class="align-right">Click TP</div>
+            <div class="align-right">No Wait</div>
+            <div class="align-right">Infinite Donuts</div>
+            <div class="align-right">Auto Breakout</div>
+            <div class="align-right">WalkSpeed, Gravity Mods</div>
+            <div class="align-right">Weapon Mods: Full Auto, Fire Rate, Mag Size, Camera Shake, Bullet Spread, Bullets Per Shot</div>
+            <div class="align-right">Criminal, Police, Prisoner, Airdrop ESP</div>
+            <div class="align-right">Criminal, Police, Prisoner, Airdrop Tracers</div>
+            <div class="align-right">Tracer Width Mod</div>
+            <div class="align-right">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
+            <div class="align-right">Toggleable Store Labels</div>
             <hr>
             <button id = "JBBtn">loadstring(game:HttpGet('https://github.com/SykoticCataclysm/Scripts/blob/master/Paid%20Executors/Jailbreak.lua', true)()</button>
             <hr>
