--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -79,7 +79,7 @@
             }
             .align-right
             { 
-                float: right;
+                float: inline-end;
                 width: 50%; 
             }
         </style>
@@ -125,6 +125,7 @@
             <div class="align-right">Tracer Width Mod</div>
             <div class="align-right">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
             <div class="align-right">Toggleable Store Labels</div>
+            <br>
             <hr>
             <button id = "JBBtn">loadstring(game:HttpGet('https://github.com/SykoticCataclysm/Scripts/blob/master/Paid%20Executors/Jailbreak.lua', true)()</button>
             <hr>
