--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -79,7 +79,9 @@
             }
             .align-right
             { 
-                float: inline-end;
+                float: right;
+                margin-left: auto;
+                margin-right: 0;
                 width: 50%; 
             }
         </style>
