--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -79,9 +79,9 @@
             }
             .align-right
             { 
+                display: flex;
+                justify-content: flex-end;
                 float: right;
-                margin-left: auto;
-                margin-right: 0;
                 width: 50%; 
             }
         </style>
