--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -74,14 +74,14 @@
             }
             .align-left
             { 
-                float: left;
+                display: flex;
+                justify-content: flex-start;
                 width: 50%; 
             }
             .align-right
             { 
                 display: flex;
                 justify-content: flex-end;
-                float: right;
                 width: 50%; 
             }
         </style>
@@ -98,34 +98,34 @@
             <h1>Amazing Script Containing:</h1>
             <br>
             <div class="align-left">Working TP Bypass</div>
-            <div class="align-left">Car NoClip</div>
+            <div class="align-right">Car NoClip</div>
             <div class="align-left">Car Jump</div>
-            <div class="align-left">Rainbow Car</div>
+            <div class="align-right">Rainbow Car</div>
             <div class="align-left">Infinite Nitro</div>
-            <div class="align-left">Rainbow Nitro</div>
+            <div class="align-right">Rainbow Nitro</div>
             <div class="align-left">Never Break Tires</div>
-            <div class="align-left">Free Mobile Garage</div>
+            <div class="align-right">Free Mobile Garage</div>
             <div class="align-left">Car Speed, Suspension Height Mods</div>
-            <div class="align-left">Free Premium JetPack Fuel</div>
+            <div class="align-right">Free Premium JetPack Fuel</div>
             <div class="align-left">Infinite JetPack Fuel</div>
-            <div class="align-left">Give JetPack</div>
+            <div class="align-right">Give JetPack</div>
             <div class="align-left">No Doors</div>
-            <div class="align-left">No Buildings</div>
+            <div class="align-right">No Buildings</div>
             <div class="align-left">Anti-Spike Traps</div>
-            <div class="align-left">Give Items</div>
-            <div class="align-right">NoClip</div>
+            <div class="align-right">Give Items</div>
+            <div class="align-left">NoClip</div>
             <div class="align-right">Fly ( Works For People And Cars )</div>
-            <div class="align-right">Infinite Jump</div>
+            <div class="align-left">Infinite Jump</div>
             <div class="align-right">Click TP</div>
-            <div class="align-right">No Wait</div>
+            <div class="align-left">No Wait</div>
             <div class="align-right">Infinite Donuts</div>
-            <div class="align-right">Auto Breakout</div>
+            <div class="align-left">Auto Breakout</div>
             <div class="align-right">WalkSpeed, Gravity Mods</div>
-            <div class="align-right">Weapon Mods: Full Auto, Fire Rate, Mag Size, Camera Shake, Bullet Spread, Bullets Per Shot</div>
+            <div class="align-left">Weapon Mods: Full Auto, Fire Rate, Mag Size, Camera Shake, Bullet Spread, Bullets Per Shot</div>
             <div class="align-right">Criminal, Police, Prisoner, Airdrop ESP</div>
-            <div class="align-right">Criminal, Police, Prisoner, Airdrop Tracers</div>
+            <div class="align-left">Criminal, Police, Prisoner, Airdrop Tracers</div>
             <div class="align-right">Tracer Width Mod</div>
-            <div class="align-right">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
+            <div class="align-left">Custom AutoRob: Bank, Jewelry Store, Museum, Airdrops</div>
             <div class="align-right">Toggleable Store Labels</div>
             <br>
             <hr>
