--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -74,12 +74,14 @@
             }
             .align-left
             { 
+                float: left;
                 display: flex;
                 justify-content: flex-start;
                 width: 50%; 
             }
             .align-right
             { 
+                float: right;
                 display: flex;
                 justify-content: flex-end;
                 width: 50%; 
