--- a/Jailbreak.html
+++ b/Jailbreak.html
@@ -75,16 +75,28 @@
             .align-left
             { 
                 float: left;
+                margin-left: 10%;
+                margin-right: auto;
                 display: flex;
                 justify-content: flex-start;
                 width: 50%; 
+                line-height: 24px;
+                color: #e8e8e8;
+                font-family: 'Segoe UI';
+                font-size: 18px;
             }
             .align-right
             { 
                 float: right;
+                margin-left: auto;
+                margin-right: 10%;
                 display: flex;
                 justify-content: flex-end;
                 width: 50%; 
+                line-height: 24px;
+                color: #e8e8e8;
+                font-family: 'Segoe UI';
+                font-size: 18px;
             }
         </style>
 	</head>
